# fasta-reader-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml  pythonapp.yml  test.yml
fasta_reader/: __init__.py  _cli.py  _parser.py  _reader.py  _testit.py  _version.py  _writer.py  anyfile.py  errors.py  filepath.py  formatter.py  item.py  read_fasta.py  reader.py  uri.py  write_fasta.py  writer.py
fasta_reader/test/: PF03373.seq  conftest.py  damaged1.seq  damaged2.seq  damaged3.seq  protein.faa  test_fasta.py
tests/: test_fasta.py
tests/data/: correct1.faa  correct2.fna  correct3.fna
