[tool.poetry]
name = "fasta-reader"
version = "3.0.0"
description = "FASTA file reader/writer."
authors = ["Danilo Horta <fdanilo.horta@pm.me>"]
repository = "https://github.com/EBI-Metagenomics/fasta-reader"
license = "MIT"
readme = "README.md"
packages = [{ include = "fasta_reader" }]

[tool.poetry.dependencies]
python = "^3.9"
more-itertools = ">=9.1.0"
xopen = ">=1.7.0"
fsspec = { version = ">=2023.1.0", extras = ["http", "sftp", "s3", "github"] }

[tool.poetry.group.dev.dependencies]
deptry = ">=0.6.4"
pre-commit = ">=2.20.0"
pytest = ">=7.2.0"
pytest-datafiles = ">=3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
