[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = FASTA file reader
download_url = https://github.com/EBI-Metagenomics/fasta-reader-py
keywords = fasta, reader
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = fasta-reader
url = https://github.com/EBI-Metagenomics/fasta-reader-py
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.2
install_requires =
    click>=7.0
    importlib-resources>=1.0.2
    pytest>=3.6.3
    more-itertools>=7.2.0

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --ignore="setup.py"
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
orecursedirs = .eggs .git *.egg-info build .ropeproject .undodir
pep8ignore = E402 W0212 W0622 R0915

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[pylint]
disable = redefined-builtin,R0915

[flake8]
ignore = E501 E741 E203 W503 W0212 W0622 R0915
