[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = FASTA file reader
download_url = https://github.com/EBI-Metagenomics/fasta-reader-py
keywords = fasta, reader
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = fasta-reader
url = https://github.com/EBI-Metagenomics/fasta-reader-py
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    wheel>=0.34.2
install_requires =
    click>=7.1.2
    importlib-resources>=1.4.0
    more-itertools>=8.4.0
    pytest>=5.4.3

[aliases]
test = pytest

[tool:pytest]
addopts =
    --doctest-modules
    --ignore="setup.py"
doctest_optionflags = NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS ALLOW_UNICODE
norecursedirs = .eggs .git *.egg-info build .ropeproject .undodir

[pylint]
disable = redefined-builtin,R0915

[flake8]
ignore = E501 E741 E203 W503 W0212 W0622 R0915
